# cpp-playground

./: CMakeLists.txt
01_hello_world/src/: main.cpp
02_odd_even/src/: main.cpp
03_armstrong/src/: armstrong_main.cpp
04_display_book/src/: main_books.cpp
05_show_arguments/: CMakeLists.txt
05_show_arguments/src/: main_Show_Arguments.cpp
06_read_file/src/: main_bookread.cpp
07_matrix_to_console/src/: main_matrix_console.cpp
08_lib_ini_read_book/src/: main_ini_bookread.cpp
15_game_of_life/src/: GameOfLive.cpp  GameOfLive.h  game_of_life.cpp  game_of_life.h  main.cpp
20_game_of_life_dll/: CMakeLists.txt  game_of_life_dll.vcxproj  game_of_life_dll.vcxproj.filters
20_game_of_life_dll/include/: Board.h  GameOfLife.h  build_options_gol_dll.h
20_game_of_life_dll/src/: GameOfLife.cpp
20_game_of_life_dll/x64/Debug/: vc142.idb
20_game_of_life_dll/x64/Debug/game_of_life_dll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  game_of_life_dll.lastbuildstate  game_of_life_dll.write.1u.tlog  link.6208.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
20_sfml_lib_sample/: CMakeLists.txt
20_sfml_lib_sample/include/: Board.h  GameOfLife.h  Pattern.h  game_of_life.h  sfml_app.h
20_sfml_lib_sample/src/: Board.cpp  GameOfLife.cpp  game_of_life.cpp  main.cpp  sfml_app.cpp
Curs/Aplicatie_Curs_02/: Aplicatie_Curs_02.vcxproj
Curs/Aplicatie_Curs_3/: Aplicatie_Curs_3.vcxproj  Source.cpp
Curs/ClassLib/: ClassLib.vcxproj
data/: 20_setings.ini
game_of_life_dll/: game_of_life_dll.vcxproj  game_of_life_dll.vcxproj.filters
(+1 files in other folders)
